--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1,
+p {
+  font-family: Lato;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 16px;
+}
+
+body {
+  margin: auto 0;
+  background-color: ;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.w-50 {
+  width: 50%;
+  min-width: 250px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.h-center {
+  align-items: center;
+}
+
+.v-center {
+  justify-content: center;
+}
+
+.pa-1 {
+  padding: 0.5rem;
+}
+
+.pa-4 {
+  padding: 2rem;
+}
+
+.mr-8 {
+  margin-right: 8px;
+}
+
+form label {
+  font-size: 1rem;
+  padding-bottom: 0.4rem;
+  display: block;
+}
+
+select.my-input,
+input.my-input {
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
+select.my-input {
+  text-transform: capitalize;
+}
+
+button {
+  font-size: 1rem;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 0.2rem;
+}
+
+.full-width {
+  width: 100%;
+}
+
+button:last-child {
+  margin-top: 1rem;
+}
+
+button.primary {
+  background-color: rgb(3, 192, 3);
+  color: #fff;
+}
+
+button.secondary {
+  background-color: #a7a1a1;
+  color: #fff;
+}
+
+.special-text {
+  font-size: 2rem;
+  color: #3e3e3e;
 }
